# AMK-NN

./: .gitignore  AMKNN.sln  CMakeLists.txt  README.md
AMKNN/: AMKNN.vcxproj  AMKNN.vcxproj.filters  CMakeLists.txt
AMKNN/src/: amknn.h  common.h  neural_network.cpp  neural_network.h
AMKNN/src/activations/: activation_layers.h  dropout.cpp  dropout.h  relu.cpp  relu.h  relu_leak.cpp  relu_leak.h  sigmoid.cpp  sigmoid.h  sine.cpp  sine.h  tanh.cpp  tanh.h
AMKNN/src/data/: array.h  dataset.cpp  dataset.h  list.h  shape.cpp  shape.h  tensor.cpp  tensor.h
AMKNN/src/gui/: image.cpp  image.h  program.cpp  program.h  trackbar.cpp  trackbar.h
AMKNN/src/layers/: avg_pool.cpp  avg_pool.h  base_layer.cpp  base_layer.h  convolutional.cpp  convolutional.h  convolutional_transposed.cpp  convolutional_transposed.h  element_wise_linear.cpp  element_wise_linear.h  fully_connected.cpp  fully_connected.h  max_pool.cpp  max_pool.h  neural_layers.cpp  neural_layers.h
AMKNN/src/losses/: loss_function.cpp  loss_function.h  mse_loss.cpp  mse_loss.h
AMKNN/src/optimizers/: adam.cpp  adam.h  gradient_descent.cpp  gradient_descent.h  optimizer.h  optimizers.h  parameter.h  rms_propagation.cpp  rms_propagation.h
AMKNN/src/utils/: convolution.h  geometry.h  graphics.h  random.h  utils.h
DEMO_Image_Upscale/: program.h  (+3 more)
demo/Image_Upscale/: CMakeLists.txt  DEMO_Image_Upscale.vcxproj  DEMO_Image_Upscale.vcxproj.filters
demo/Image_Upscale/src/: loaders.cpp  loaders.h  main.cpp  program.cpp  program.h
demo/Image_Upscale/src/components/: Image.cpp  Image.h  MainWindow.cpp  MainWindow.h
(+66 files in other folders)
